--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>QGIS Translation Validator</title>
-        <link rel="stylesheet" href="./validator.css">
+        <title>QGIS Translation Checker</title>
+        <link rel="stylesheet" href="./checker.css">
     </head>
     <body>
         <div id="main">
-            <div id="title">QGIS Translation Validator</div>
+            <div id="title">QGIS Translation Checker</div>
             <div id="output"><ul></ul></div>
             <div id="footer"><a href="https://github.com/minorua">GitHub</a></div>
         </div>
@@ -16,6 +16,6 @@
             <div id="status"></div>
             <progress value="0"></progress>
         </div>
-        <script type="text/javascript" src="./validator.js"></script>
+        <script type="text/javascript" src="./checker.js"></script>
     </body>
 </html>
