--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>QGIS Translation Checker</title>
         <link rel="stylesheet" href="./checker.css">
+        <script src="./lib/kuromoji.js/kuromoji.js"></script>
+        <script src="./checker.js"></script>
     </head>
     <body>
         <div id="main">
@@ -16,6 +18,5 @@
             <div id="status"></div>
             <progress value="0"></progress>
         </div>
-        <script type="text/javascript" src="./checker.js"></script>
     </body>
 </html>
