--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="main">
-            <div id="title">QGIS Translation Checker</div>
+            <h1 id="title">QGIS Translation Checker</h1>
             <div id="output"><ul></ul></div>
             <div id="footer"><a href="https://github.com/minorua">GitHub</a></div>
         </div>
