--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <div id="fetch_button_line"><button id="fetch_button">Fetch & Open</button></div>
                         </td>
                     </tr>
-                </div>
+                </table>
             </div>
         </div>
         <div id="progress">
