move checkTranslation() to check_rules.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./checker.css">
         <script src="./lib/kuromoji.js/kuromoji.js"></script>
         <script src="./checker.js"></script>
+        <script src="./check_rules.js"></script>
     </head>
     <body>
         <div id="main">
