add language names under i18n directory in master

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
                         <td>
                             <div><label for="lang">Language</label></div>
                             <div>
-                                <select id="lang" name="lang" size="15">
-                                    <option>ja</option>
-                                </select>
+                                <select id="lang" name="lang" size="15"></select>
                             </div>
                         </td>
                         <td>
