add useTokenizer parameter (fix #1)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="footer"><a href="https://github.com/minorua">GitHub</a></div>
         </div>
         <div id="panel">
-            <div><span class="method">- Open a local .ts file:</span> <button id="open_button">Open</button></div>
+            <div><span class="method">- Open a local .ts file:</span> <button id="open_button">Open & Check</button></div>
             <br>
             <div>
                 <div class="method">- Fetch a .ts file from GitHub:</div>
@@ -39,7 +39,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            <div id="fetch_button_line"><button id="fetch_button">Fetch & Open</button></div>
+                            <div id="fetch_button_line"><button id="fetch_button">Fetch & Check</button></div>
                         </td>
                     </tr>
                 </table>
