--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="main">
             <h1 id="title">QGIS Translation Checker</h1>
-            <div id="result"><ul></ul></div>
+            <div id="result"></div>
             <div id="footer"><a href="https://github.com/minorua">GitHub</a></div>
         </div>
         <div id="panel">
