--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                             <div><label for="branch">Branch</label></div>
                             <div>
                                 <select id="branch" name="branch" size="15">
+                                    <option>release-3_42</option>
                                     <option>release-3_40</option>
                                     <option>release-3_38</option>
                                     <option>release-3_34</option>
